added image and list

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         class="center"/>
     <div class="center">
         <ul>
-            <li>I am a 24 year old man</li>
+            <li>I am a 30 year old man</li>
             <li>I love animals</li>
             <li>I love video-games</li>
-            <li>I love movies</li>
+            <li>I enjoy the taste of paint</li>
         </ul>
     </div>
 </body>
